after first lecture.

--- a/project.config.json
+++ b/project.config.json
@@ -37,7 +37,7 @@
   "compileType": "miniprogram",
   "libVersion": "2.14.0",
   "appid": "wxfb2d864834e64b71",
-  "projectname": "pt-wk4.1",
+  "projectname": "lwpt-fall20-wk5.3",
   "debugOptions": {
     "hidedInDevtools": []
   },
